--- a/src/mylangchain_app/00Basic/000Groq_연동_basic.ipynb
+++ b/src/mylangchain_app/00Basic/000Groq_연동_basic.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "id": "0c61ba15",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
      "output_type": "stream",
      "text": [
       "<class 'langchain_openai.chat_models.base.ChatOpenAI'>\n",
-      "client=<openai.resources.chat.completions.completions.Completions object at 0x14029dd50> async_client=<openai.resources.chat.completions.completions.AsyncCompletions object at 0x14029d790> root_client=<openai.OpenAI object at 0x14029f3d0> root_async_client=<openai.AsyncOpenAI object at 0x14029cf50> model_name='moonshotai/kimi-k2-instruct-0905' temperature=0.7 model_kwargs={} openai_api_key=SecretStr('**********') openai_api_base='https://api.groq.com/openai/v1'\n"
+      "client=<openai.resources.chat.completions.completions.Completions object at 0x140293790> async_client=<openai.resources.chat.completions.completions.AsyncCompletions object at 0x1402ba610> root_client=<openai.OpenAI object at 0x14011d2d0> root_async_client=<openai.AsyncOpenAI object at 0x140292490> model_name='openai/gpt-oss-120b' temperature=0.7 model_kwargs={} openai_api_key=SecretStr('**********') openai_api_base='https://api.groq.com/openai/v1'\n"
      ]
     }
    ],
@@ -118,7 +118,8 @@
     "    #api_key=OPENAI_API_KEY,\n",
     "    base_url=\"https://api.groq.com/openai/v1\",  # Groq API 엔드포인트\n",
     "    #model=\"meta-llama/llama-4-scout-17b-16e-instruct\", # 사용 모델: llama-4-scout\n",
-    "    model=\"moonshotai/kimi-k2-instruct-0905\", # 사용 모델: kimi-k2\n",
+    "    #model=\"moonshotai/kimi-k2-instruct-0905\", # 사용 모델: kimi-k2\n",
+    "    model=\"openai/gpt-oss-120b\", # 사용 모델: gpt-oss-120b\n",
     "    temperature=0.7\n",
     ")\n",
     "print(type(llm)) # 타입: ChatOpenAI\n",
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "id": "5c3ff864",
    "metadata": {},
    "outputs": [
@@ -136,179 +137,237 @@
      "output_type": "stream",
      "text": [
       "<class 'langchain_core.messages.ai.AIMessage'>\n",
-      "응답: 파이썬(Python)은 1991년 네덜란드의 개발자 귀도 반 로섬(Guido van Rossum)이 만들고 1994년 1.0으로 공개된 고급 프로그래밍 언어입니다. 이름은 그가 좋아하는 코미디 그룹 ‘Monty Python’에서 따왔습니다. 다음은 파이썬이 어떤 언어이며, 어떤 특징을 가지고 있는지, 어떻게 활용되는지를 가능한 한 상세히 정리한 설명입니다.\n",
+      "응답: ## 파이썬(Python)이란?\n",
       "\n",
-      "────────────────────────────────────────\n",
-      "1. 언어적 위치와 철학\n",
-      "────────────────────────────────────────\n",
-      "1) 고급 언어(High-level language)\n",
-      "- 하드웨어 제어에 가까운 ‘저급’ 언어(C, Assembly)와 달리 사람이 읽고 쓰기 쉽게 설계됨\n",
-      "- 메모리 관리, 포인터 연산 같은 저수준 세부사업을 언어 차원에서 자동 처리\n",
+      "파이썬은 **고급(high‑level) 프로그래밍 언어**이며, 1991년 네덜란드의 귀도 반 로섬(Guido van Rossum)이 처음 발표했습니다. 현재는 전 세계 수많은 개발자와 기업이 사용하고 있는 가장 인기 있는 언어 중 하나이며, **읽기 쉬운 문법**, **다양한 라이브러리·프레임워크**, **광범위한 적용 분야**가 특징입니다.\n",
       "\n",
-      "2) 인터프리터 방식(Interpreter)\n",
-      "- 소스 코드(.py)를 한 줄씩 즉시 해석해 실행. 컴파일 언어(C, C++, Rust 등)처럼 빌드-링크-실행 단계가 필요 없음\n",
-      "- 개발-테스트 사이클이 짧고 대화형(REPL) 환경이 기본 제공 → 실험적 코딩·데이터 탐색에 적합\n",
+      "---\n",
       "\n",
-      "3) “배터리 포함(Batteries Included)” 철학\n",
-      "- 표준 라이브러리만으로도 파일 압축·이메일·웹 서버·데이터베이스·암호화 등을 해결할 수 있도록 풍부한 모듈 포함\n",
-      "- 외부 라이브러리가 있으면 더욱 강력하지만, “무작정 깔기 전에” 표준만으로도 충분한 경우가 많음\n",
+      "## 1. 파이썬의 주요 특징\n",
       "\n",
-      "4) 가독성과 명확성\n",
-      "- PEP 20(“Zen of Python”)에 ‘읽기 쉬운 코드가 쓰기 쉬운 코드보다 중요하다’는 취지 담김\n",
-      "- 들여쓰기(Indentation)로 블록 구조를 강제 → 작성자의 의도가 시각적으로 드러남\n",
+      "| 특징 | 설명 |\n",
+      "|------|------|\n",
+      "| **읽기 쉬운 문법** | 코드가 자연어에 가깝고 들여쓰기로 블록을 구분해 가독성이 뛰어납니다. |\n",
+      "| **동적 타이핑** | 변수 선언 시 타입을 명시하지 않아도 런타임에 자동으로 결정됩니다. |\n",
+      "| **인터프리터 언어** | 소스 코드를 바로 실행할 수 있어 빠른 테스트와 프로토타이핑이 가능합니다. |\n",
+      "| **멀티패러다임** | 절차형, 객체지향, 함수형 프로그래밍을 모두 지원합니다. |\n",
+      "| **풍부한 표준 라이브러리** | 파일 I/O, 네트워킹, 웹, 데이터베이스, 암호화 등 2만 개 이상의 모듈 제공. |\n",
+      "| **플랫폼 독립성** | Windows, macOS, Linux 등 거의 모든 운영체제에서 동일하게 동작합니다. |\n",
+      "| **확장성** | C/C++ 로 작성된 모듈을 쉽게 호출하거나, Cython, PyPy 등으로 성능을 향상시킬 수 있습니다. |\n",
+      "| **활발한 커뮤니티** | 전 세계 개발자·연구자들이 만든 수많은 오픈소스 패키지와 튜토리얼이 존재합니다. |\n",
       "\n",
-      "────────────────────────────────────────\n",
-      "2. 언어적 특징\n",
-      "────────────────────────────────────────\n",
-      "1) 동적 타이핑(Dynamic Typing)\n",
-      "- 변수에 타입을 미리 선언하지 않음. 실행 중에 객체 타입이 결정\n",
-      "- 장점: 빠른 프로토타이핑 / 단점: 런타임에 타입 오류가 드러날 가능성 → type hint, mypy 등으로 보완\n",
+      "---\n",
       "\n",
-      "2) 강력한 객체 지향\n",
-      "- 모든 것이 객체. 다중 상속, 연산자 오버로딩, 데코레이터, 메타클래스 등 고급 OOP 기능 제공\n",
-      "- “프로토콜” 개념(특별 매직 메서드)으로 딕셔너리·리스트처럼 동작하는 사용자 클래스 설계 가능\n",
+      "## 2. 파이썬의 기본 문법\n",
       "\n",
-      "3) 함수형 프로그래밍 지원\n",
-      "- 람다, 내장 map/filter/reduce, 리스트·딕셔너리·제너레이터 컴프리헨션, functools/itertools 모듈\n",
-      "- 1급 함수(First-class function) → 함수를 변수에 저장·전달·클로저·데코레이터 구현 가능\n",
-      "\n",
-      "4) 메모리 관리\n",
-      "- 자동 가비지 컬렉션(참조 카운트 + 사이클 탐지). 개발자가 malloc/free 고민할 필요 없음\n",
-      "- 메모리 풀링, weakref, __del__ 등 세밀한 제어가 필요할 때도 옵션 제공\n",
-      "\n",
-      "5) 확장성\n",
-      "- C/C++, Fortran 코드를 연결하는 C-API → 병목이 되는 연산을 C로 옮겨 고속화(Cython, pybind11, ctypes)\n",
-      "- 반대로 파이썬을 내장 스크립팅 언어로 삼는 프로그램(Blender, GIMP, Unity 플러그인 등)도 많음\n",
-      "\n",
-      "────────────────────────────────────────\n",
-      "3. 생태계와 버전\n",
-      "────────────────────────────────────────\n",
-      "1) 파이썬 2 vs 3\n",
-      "- 2008년 파이썬 3 발표. print 문법, 유니코드 처리, 정수 나눗셈 등 하위 호환 깨는 개선\n",
-      "- 2020년 1월 파이썬 2 공식 지원 종료. 신규 개발은 3.x 권장(현재는 3.12까지 출시)\n",
-      "\n",
-      "2) 패키지 매니저\n",
-      "- PyPI(Python Package Index)에 40만+ 오픈소스 라이브러리 등록 → pip install 명령 한 줄로 설치\n",
-      "- conda, poetry, pipenv, uv 등 가상 환경·종속성 관리 도구가 다양\n",
-      "\n",
-      "3) 가상 환경\n",
-      "- venv, virtualenv, conda env 등으로 프로젝트별 독립 공간 구성 → “깨진 종속성 지옥” 방지\n",
-      "\n",
-      "────────────────────────────────────────\n",
-      "4. 주요 활용 분야\n",
-      "────────────────────────────────────────\n",
-      "1) 데이터 분석·과학\n",
-      "- NumPy: 고성능 다차원 배열\n",
-      "- pandas: DataFrame 기반 정형 데이터 처리\n",
-      "- SciPy: 과학·공학 계산\n",
-      "- Matplotlib, Seaborn, Plotly: 시각화\n",
-      "- scikit-learn, statsmodels: 머신러닝·통계\n",
-      "- Jupyter Notebook/Lab: 대화형 노트북 환경 → 분석·교육·리포트 삼박자\n",
-      "\n",
-      "2) 인공지능·머신러닝·딥러닝\n",
-      "- TensorFlow, PyTorch, Keras, Hugging Face Transformers 등 생태계의 사실상 표준\n",
-      "- 하드웨어 가속(GPU/TPU) 바인딩이 잘 되어 있음\n",
-      "\n",
-      "3) 웹 개발\n",
-      "- Django: “ batteries included” 웹 프레임워크. ORM, 인증, 관리자 UI 등 풀세트\n",
-      "- Flask, FastAPI: 마이크로·ASGI 기반 고성능 API\n",
-      "- BeautifulSoup, Scrapy: 크롤링·스크레이핑\n",
-      "\n",
-      "4) DevOps·시스템 관리\n",
-      "- Ansible, SaltStack: 자동화·배포\n",
-      "- Fabric, Invoke: SSH 기반 원격 명령·스크립트\n",
-      "- OpenStack, AWS CDK, pulumi: 인프라스트럭처를 코드로\n",
-      "\n",
-      "5) 데스크톱 GUI\n",
-      "- Tkinter(표준), PyQt, PySide, Kivy, wxPython 등\n",
-      "\n",
-      "6) 게임·그래픽\n",
-      "- Pygame, Panda3D, Godot 스크립트(파이썬 유사), Blender scripting\n",
-      "\n",
-      "7) 임베디드·사물인터넷\n",
-      "- MicroPython, CircuitPython: 메모리 제약 마이크로컨트롤러에서 직접 실행\n",
-      "- Raspberry Pi: 교육·제작 무빙의 대표 플랫폼\n",
-      "\n",
-      "────────────────────────────────────────\n",
-      "5. 예제 코드\n",
-      "────────────────────────────────────────\n",
-      "1) 짧은 직관 예제\n",
+      "### 2‑1. 변수와 자료형\n",
       "```python\n",
-      "# 리스트 컴프리헨션과 함수\n",
-      "def squares(n):\n",
-      "    return [x*x for x in range(1, n+1)]\n",
-      "\n",
-      "print(squares(5))          # [1, 4, 9, 16, 25]\n",
+      "# 정수, 실수, 문자열, 불리언\n",
+      "a = 10          # int\n",
+      "b = 3.14        # float\n",
+      "name = \"Alice\"  # str\n",
+      "flag = True     # bool\n",
       "```\n",
       "\n",
-      "2) pandas로 CSV 읽고 기초 통계\n",
+      "### 2‑2. 컬렉션(시퀀스) 자료형\n",
       "```python\n",
-      "import pandas as pd\n",
-      "df = pd.read_csv('sales.csv')\n",
-      "print(df.groupby('Region')['Revenue'].mean())\n",
+      "# 리스트\n",
+      "numbers = [1, 2, 3, 4]\n",
+      "\n",
+      "# 튜플 (불변)\n",
+      "coords = (10, 20)\n",
+      "\n",
+      "# 딕셔너리 (키-값 쌍)\n",
+      "person = {\"name\": \"Bob\", \"age\": 30}\n",
+      "\n",
+      "# 집합 (중복 없는 원소)\n",
+      "unique = {1, 2, 3}\n",
       "```\n",
       "\n",
-      "3) FastAPI로 REST API 한 줄\n",
+      "### 2‑3. 제어 흐름\n",
       "```python\n",
-      "from fastapi import FastAPI\n",
-      "app = FastAPI()\n",
+      "# 조건문\n",
+      "if a > 5:\n",
+      "    print(\"a는 5보다 큽니다.\")\n",
+      "elif a == 5:\n",
+      "    print(\"a는 5와 같습니다.\")\n",
+      "else:\n",
+      "    print(\"a는 5보다 작습니다.\")\n",
       "\n",
-      "@app.get(\"/\")\n",
-      "def root():\n",
-      "    return {\"message\": \"Hello World\"}\n",
+      "# 반복문\n",
+      "for i in range(5):      # 0~4\n",
+      "    print(i)\n",
+      "\n",
+      "while flag:\n",
+      "    # 어떤 작업 수행\n",
+      "    flag = False        # 루프 탈출\n",
       "```\n",
       "\n",
-      "────────────────────────────────────────\n",
-      "6. 장점\n",
-      "────────────────────────────────────────\n",
-      "1) 배우기 쉬움 → 문법이 단순, 영어 어휘와 유사\n",
-      "2) 개발 속도가 빠름 → 인터프리터+라이브러리\n",
-      "3) 방대한 커뮤니티 → 스택오버플로우, 튜토리얼, 오픈소스\n",
-      "4) 크로스 플랫폼 → Windows, macOS, Linux, BSD 등\n",
-      "5) 생산성이 검증 → 스타트업·빅테크·정부·대학 모두 도입\n",
+      "### 2‑4. 함수 정의\n",
+      "```python\n",
+      "def greet(name: str, times: int = 1) -> None:\n",
+      "    \"\"\"인사를 여러 번 출력하는 함수.\"\"\"\n",
+      "    for _ in range(times):\n",
+      "        print(f\"Hello, {name}!\")\n",
       "\n",
-      "────────────────────────────────────────\n",
-      "7. 단점 및 보완\n",
-      "────────────────────────────────────────\n",
-      "1) 실행 속도\n",
-      "- CPython은 인터프리터 + GIL(글로벌 인터락)로 인해 CPU-bound 연산에서 느릴 수 있음\n",
-      "- 보완: PyPy(JIT), Cython, Numba, Numpy(벡터화), 멀티프로세싱, 러스트 확장 등\n",
+      "greet(\"Alice\", 3)\n",
+      "```\n",
       "\n",
-      "2) 모바일·임베디드\n",
-      "- 안드로이드/iOS 네이티브 앱에는 적합하지 않음. Kivy·BeeWare 등은 한계 존재\n",
-      "- 즉, “모든 플랫폼에서 최선”은 아님\n",
+      "### 2‑5. 클래스와 객체지향\n",
+      "```python\n",
+      "class Animal:\n",
+      "    def __init__(self, name):\n",
+      "        self.name = name\n",
       "\n",
-      "3) 패키지 의존성\n",
-      "- 버전 충돌·보안 취약점 가능 → 가상 환경, poetry lock, dependabot, pip-audit 등 관리 필요\n",
+      "    def speak(self):\n",
+      "        raise NotImplementedError\n",
       "\n",
-      "────────────────────────────────────────\n",
-      "8. 설치·실행 흐름\n",
-      "────────────────────────────────────────\n",
-      "1) 설치\n",
-      "- 공식 사이트 python.org 에서 운영체제별 인스톨러\n",
-      "- 윈도우 Microsoft Store, macOS homebrew, Linux apt/dnf 등\n",
+      "class Dog(Animal):\n",
+      "    def speak(self):\n",
+      "        return \"멍멍!\"\n",
       "\n",
-      "2) 실행\n",
-      "- 대화형: 터미널에서 python 입력 → >>> 프롬프트\n",
-      "- 스크립트: python hello.py\n",
-      "- 가상환경: python -m venv .venv && source .venv/bin/activate\n",
+      "class Cat(Animal):\n",
+      "    def speak(self):\n",
+      "        return \"야옹!\"\n",
       "\n",
-      "────────────────────────────────────────\n",
-      "9. 학습 로드맵(초급→중급→고급)\n",
-      "────────────────────────────────────────\n",
-      "1) 기초 문법: 자료형, 제어문, 함수, 모듈\n",
-      "2) 표준 라이브러리 탐색: os, sys, datetime, collections, pathlib, itertools\n",
-      "3) 가상환경·패키지 관리, 단위 테스트(pytest)\n",
-      "4) 객체지향 + 디자인 패턴 + type hint\n",
-      "5) 병렬성: threading, multiprocessing, concurrent.futures, asyncio\n",
-      "6) 성능 최적화: profiling, Cython, Numba, 러스트 확장\n",
-      "7) 고급 비동기·메타프로그래밍: 데코레이터, 컨텍스트 매니저, 메타클래스\n",
-      "8) 특화 분야(데이터, 웹, AI) 깊게\n",
+      "dog = Dog(\"바둑이\")\n",
+      "cat = Cat(\"나비\")\n",
+      "print(dog.speak())  # 멍멍!\n",
+      "print(cat.speak())  # 야옹!\n",
+      "```\n",
       "\n",
-      "────────────────────────────────────────\n",
-      "10. 요약 한 줄\n",
-      "────────────────────────────────────────\n",
-      "“파이썬은 ‘읽기 쉽고 활용도 높으며, 방대한 라이브러리가 준비된 고급 범용 언어’로, 최고의 생산성을 내세워 빠른 개발이 필요한 분야—특히 데이터, AI, 웹, 자동화—에서 사실상 표준으로 자리 잡았다.”\n"
+      "---\n",
+      "\n",
+      "## 3. 파이썬이 쓰이는 분야\n",
+      "\n",
+      "| 분야 | 활용 예시 |\n",
+      "|------|-----------|\n",
+      "| **웹 개발** | Django, Flask, FastAPI 등 웹 프레임워크로 서버·API 구현 |\n",
+      "| **데이터 과학·머신러닝** | NumPy, pandas, scikit-learn, TensorFlow, PyTorch 등 |\n",
+      "| **자동화·스크립트** | 시스템 관리, 파일 처리, 웹 스크래핑(BeautifulSoup, Selenium) |\n",
+      "| **과학·공학** | 시뮬레이션, 수치해석(NumPy, SciPy), 시각화(Matplotlib, Seaborn) |\n",
+      "| **게임 개발** | Pygame, Panda3D 등 |\n",
+      "| **데스크톱·GUI** | Tkinter, PyQt, Kivy 등 |\n",
+      "| **임베디드·IoT** | MicroPython, CircuitPython |\n",
+      "| **교육** | 프로그래밍 입문 언어로 널리 사용 (문법이 간단하고 직관적) |\n",
+      "\n",
+      "---\n",
+      "\n",
+      "## 4. 파이썬 실행 환경\n",
+      "\n",
+      "1. **CPython** – 가장 일반적인 구현 (C로 작성, 공식 레퍼런스 구현)\n",
+      "2. **PyPy** – JIT(Just‑In‑Time) 컴파일러 기반, 속도가 빠름\n",
+      "3. **Jython** – Java 플랫폼 위에서 동작, Java 라이브러리와 호환\n",
+      "4. **IronPython** – .NET 플랫폼용 구현\n",
+      "5. **MicroPython / CircuitPython** – 마이크로컨트롤러용 경량 구현\n",
+      "\n",
+      "### 가상 환경(Virtual Environment)\n",
+      "프로젝트마다 독립적인 패키지 집합을 관리하기 위해 `venv` 또는 `conda`와 같은 가상 환경을 사용합니다.\n",
+      "\n",
+      "```bash\n",
+      "# venv 사용 예시\n",
+      "python -m venv myenv\n",
+      "source myenv/bin/activate   # macOS/Linux\n",
+      "myenv\\Scripts\\activate.bat  # Windows\n",
+      "\n",
+      "# 패키지 설치\n",
+      "pip install requests pandas\n",
+      "```\n",
+      "\n",
+      "---\n",
+      "\n",
+      "## 5. 파이썬 패키지 관리\n",
+      "\n",
+      "- **pip** : 기본 패키지 매니저 (`pip install package_name`)\n",
+      "- **conda** : 과학·데이터 분야에서 많이 쓰이는 환경·패키지 매니저 (`conda install numpy`)\n",
+      "- **Poetry** / **pipenv** : 의존성 파일(`pyproject.toml`, `Pipfile`)을 자동 관리해주는 현대적인 도구\n",
+      "\n",
+      "---\n",
+      "\n",
+      "## 6. 성능 최적화 팁\n",
+      "\n",
+      "| 방법 | 설명 |\n",
+      "|------|------|\n",
+      "| **Cython** | 파이썬 코드를 C로 변환해 실행 속도 향상 |\n",
+      "| **Numba** | JIT 컴파일러를 사용해 수치 연산 가속 |\n",
+      "| **멀티스레딩** | I/O 바운드 작업에 `threading` 활용 (GIL 제한) |\n",
+      "| **멀티프로세싱** | CPU 바운드 작업에 `multiprocessing` 활용 |\n",
+      "| **비동기 프로그래밍** | `asyncio` 로 I/O 병렬 처리 |\n",
+      "| **프로파일링** | `cProfile`, `line_profiler` 로 병목 찾기 |\n",
+      "| **외부 라이브러리** | NumPy, pandas 등 C/Fortran 기반 라이브러리 사용 |\n",
+      "\n",
+      "---\n",
+      "\n",
+      "## 7. 파이썬 학습 로드맵 (초급 → 고급)\n",
+      "\n",
+      "1. **기초 문법**  \n",
+      "   - 변수, 자료형, 연산자, 제어문, 함수, 기본 입출력\n",
+      "2. **데이터 구조**  \n",
+      "   - 리스트, 튜플, 딕셔너리, 집합, 리스트 컴프리헨션\n",
+      "3. **파일·예외 처리**  \n",
+      "   - `open()`, `with`, `try/except`\n",
+      "4. **객체지향**  \n",
+      "   - 클래스, 상속, 다형성, 매직 메서드(`__init__`, `__str__` 등)\n",
+      "5. **표준 라이브러리**  \n",
+      "   - `datetime`, `os`, `sys`, `json`, `re`(정규표현식) 등\n",
+      "6. **가상 환경·패키지 관리**  \n",
+      "   - `venv`, `pip`, `requirements.txt`\n",
+      "7. **웹 개발 입문**  \n",
+      "   - Flask 혹은 Django 기본 프로젝트 만들기\n",
+      "8. **데이터 과학 기초**  \n",
+      "   - NumPy, pandas, Matplotlib 실습\n",
+      "9. **테스트·디버깅**  \n",
+      "   - `unittest`, `pytest`, `logging`\n",
+      "10. **고급 주제**  \n",
+      "    - 비동기(`asyncio`), 메타클래스, 데코레이터, Cython/Numba 활용\n",
+      "11. **프로젝트 경험**  \n",
+      "    - 실제 문제를 해결하는 작은 프로젝트(예: 웹 API, 데이터 분석, 자동화 스크립트) 수행\n",
+      "\n",
+      "---\n",
+      "\n",
+      "## 8. 파이썬 커뮤니티와 자료\n",
+      "\n",
+      "- **공식 문서** : https://docs.python.org/3/\n",
+      "- **PyPI (패키지 저장소)** : https://pypi.org/\n",
+      "- **Stack Overflow** : 파이썬 관련 Q&A\n",
+      "- **GitHub** : 오픈소스 프로젝트 탐색\n",
+      "- **Kaggle** : 데이터 사이언스·머신러닝 실습\n",
+      "- **한국 파이썬 사용자 모임** : 파이콘, 파이썬코리아 등\n",
+      "\n",
+      "---\n",
+      "\n",
+      "## 9. 간단한 실습 예제: 웹 스크래핑\n",
+      "\n",
+      "아래 코드는 `requests`와 `BeautifulSoup`을 이용해 위키피디아 페이지의 첫 번째 문단을 가져오는 예시입니다.\n",
+      "\n",
+      "```python\n",
+      "import requests\n",
+      "from bs4 import BeautifulSoup\n",
+      "\n",
+      "def get_wiki_intro(title: str) -> str:\n",
+      "    url = f\"https://en.wikipedia.org/wiki/{title}\"\n",
+      "    resp = requests.get(url)\n",
+      "    resp.raise_for_status()      # 오류 시 예외 발생\n",
+      "\n",
+      "    soup = BeautifulSoup(resp.text, \"html.parser\")\n",
+      "    # 본문 첫 번째 <p> 요소 추출\n",
+      "    first_para = soup.select_one(\"div.mw-parser-output > p\")\n",
+      "    return first_para.get_text(strip=True)\n",
+      "\n",
+      "if __name__ == \"__main__\":\n",
+      "    intro = get_wiki_intro(\"Python_(programming_language)\")\n",
+      "    print(intro)\n",
+      "```\n",
+      "\n",
+      "> **Tip**: 실제 서비스에 적용할 경우 `robots.txt` 정책을 확인하고, 과도한 요청을 피하기 위해 `time.sleep()` 등으로 딜레이를 주는 것이 좋습니다.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "## 10. 결론\n",
+      "\n",
+      "파이썬은 **읽기 쉬운 문법**, **강력한 표준·서드파티 라이브러리**, **다양한 적용 분야** 덕분에 초보자부터 전문가까지 폭넓게 활용되는 언어입니다. 기본 문법을 탄탄히 익힌 뒤, **프로젝트 기반 학습**을 통해 웹 개발, 데이터 과학, 자동화 등 자신이 관심 있는 분야에 파이썬을 적용해 보세요. 꾸준히 코드를 작성하고, 커뮤니티에 참여한다면 빠르게 실력을 성장시킬 수 있습니다. \n",
+      "\n",
+      "궁금한 점이 있으면 언제든 질문해 주세요! 🚀\n"
      ]
     }
    ],
