--- a/src/mylangchain_app/00Basic/001_LLMChain생성.ipynb
+++ b/src/mylangchain_app/00Basic/001_LLMChain생성.ipynb
@@ -457,7 +457,7 @@
    "id": "9facb193",
    "metadata": {},
    "source": [
-    "##### 2) Multiple Chains\n",
+    "### 5) Multiple Chains\n",
     "- Multi Chain을 활용한 영화 추천 및 줄거리 요약 (잘 동작하지 않는 코드)"
    ]
   },
